--- a/app/src/main/res/layout/radio_station_list_item.xml
+++ b/app/src/main/res/layout/radio_station_list_item.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+        <android.support.v7.widget.AppCompatButton
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/radio_station_list_item_name"
         android:text="NAME" />
-
 
 </android.support.constraint.ConstraintLayout>
