--- a/app/src/main/res/layout/song_info_fragment.xml
+++ b/app/src/main/res/layout/song_info_fragment.xml
@@ -37,7 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:text="ArtistName"
         android:textColor="@android:color/black"
         android:textSize="20sp"
@@ -67,12 +66,22 @@
         <Button
             android:id="@+id/button_song_info_add_to_spotify"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_weight="3"
             android:text="Add to spotify"
             app:layout_constraintEnd_toStartOf="@+id/button_select_playlist"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!--<com.peterwitt.spotyfm.Views.MaterialPlayPauseButton-->
+            <!--android:id="@+id/materialPlayPauseButton"-->
+            <!--android:layout_width="45dp"-->
+            <!--android:layout_height="45dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--app:layout_constraintEnd_toStartOf="@+id/button_select_playlist"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
     </android.support.constraint.ConstraintLayout>
 
     <Button
