--- a/app/src/main/res/layout/song_info_fragment.xml
+++ b/app/src/main/res/layout/song_info_fragment.xml
@@ -68,15 +68,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/vertical_ellipsis"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/button_song_info_add_to_spotify"
                     android:layout_width="0dp"
-                    android:layout_height="44dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Add to spotify"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button_select_playlist"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
